style.css
/* ... */
.slider-container {
  height: 500px; 
  min-width: 100vw;
  display: flex;
  overflow: auto;
  scroll-behavior:smooth;

  

}

.slider-container .slide {
  position: absolute;
  opacity: 0;
}


.slider-container .slide:nth-child(1) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/JumpRope.gif');
  background-size:initial;
  position: absolute;
  color: #fff;
  opacity: 1;
}

.slider-container .slide:nth-child(2) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/Survivor.gif');
  background-size: cover;
  position: absolute;
  opacity: 1;

}

.slider-container .slide:nth-child(3) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/subway.gif');
  background-size: cover;
  position: absolute;
  opacity: 1;

}

.slider-container .slide:nth-child(4) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/vowel.gif');
  background-size: cover;
  position: absolute;
  opacity: 1;
}

.slider-container .slide:nth-child(5) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/RoseCatcher.gif');
  background-size: cover;
  position: absolute;
  opacity: 1;

}

.slider-container h2 {
  text-decoration: none;

  position: absolute;
  top: 350px;
  left: 30px;
}

.slider-container a {
  text-decoration: none;
  color: white;
}



@media screen and (max-width: 820px) {
section {
  display: grid;
  place-items: center;
  align-content: center;
  min-height: 80vh;
  overflow: scroll;
  background-color: #141414;
  color: white;
  opacity: 1;
  scroll-
  
  
}

.open {
  font-size: 1rem;
}

.fa-gamepad {
  font-size: 1rem;
}

.slider-container {
  height: 500px; 
  min-width: 100vw;
  display: flex;
  overflow: auto;
  scroll-behavior:smooth;
  opacity: 1;
  

}

#focus-button {
  font-size: 1rem;
  background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
  padding: 14px 32px;
  border: none;
  border-radius: 4px;
  color: #fff;
  margin-top: 2rem;
  cursor: pointer;
  position: relative;
  transition: all 0.35s;
  outline: none;
}


.slider-container h2 {
  text-decoration: none;

  position: relative;
  top: 350px;
  left: 30px;
}

.slider-container .slide:nth-child(1) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/JumpRope.gif');
  background-size:initial;
  position: relative;
  color: #fff;
  opacity: 1;
}

.slider-container .slide:nth-child(2) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/Survivor.gif');
  background-size: cover;
  position: relative;
  opacity: 1;

}

.slider-container .slide:nth-child(3) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/subway.gif');
  background-size: cover;
  position: relative;
  opacity: 1;

}

.slider-container .slide:nth-child(4) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/vowel.gif');
  background-size: cover;
  position: relative;
  opacity: 1;
}

.slider-container .slide:nth-child(5) {
  margin: 1rem;
  height: 337.5px;
  width: 600px;
  border-radius: 4px;
  background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17, 17, 17, 0.6) 100%),url('/images/RoseCatcher.gif');
  background-size: cover;
  position: relative;
  opacity: 1;


}
}

/* Email Page */
form {
  max-width: 400px;
  margin: 0 auto;
}

label, input, textarea {
  display: block;
  margin-bottom: 10px;
}

/* Carousel experiment*/

